# noise-kernel

./: .gitignore  CHANGELOG.md  ChangeLog  README  README.md  configure.ac
.github/workflows/: makefile.yml
examples/: README.md  example.cpp
examples/argument/: ExampleArgumentAdapter.cpp  ExampleArgumentAdapter.h
examples/mocks/: mocks.cpp  mocks.h
examples/observer/: MockDelegate.cpp  MockDelegate.h  MockEventHandler.cpp  MockEventHandler.h  MockSender.h
man/: <autotoolscpplibtemplate>.1  Makefile.am
src/: Argument.h  Exception.h  Logger.h  Makefile.am  Observer.h  Queue.h  Signal.h  Strategy.h  Sync.h  Task.h  Tcp.h  Thread.h  main.cpp
src/argument/: Argument.cpp  ArgumentAdapter.cpp  ArgumentList.cpp  ArgumentParser.cpp  ArgumentProvider.cpp  MockAdapter.cpp  MockAdapter.h
src/exception/: DomainErrorCode.cpp  DomainException.cpp  ExceptionMapper.cpp  RuntimeException.cpp
src/logger/: BasicLogger.cpp  BasicLogger.h
src/observer/: Event.cpp  EventArgs.cpp  EventHandler.cpp
src/signal/: Signal.cpp  SignalAdapter.cpp  SignalHandler.cpp  Signal_SIGINT.cpp
src/sync/: Barrier.cpp  Locker.cpp
src/task/: TaskContext.cpp  TaskRunner.cpp
src/tcp/: ClientInfo.cpp  TcpAcceptor.cpp  TcpClient.cpp  TcpClientConfig.cpp  TcpClientConnection.cpp  TcpClientInfo.cpp  TcpConnector.cpp  TcpErrorCode.cpp  TcpProtocol.cpp  TcpServer.cpp  TcpServerConfig.cpp  TcpStream.cpp
src/tcp/lib/: TcpAcceptor.cpp  TcpAcceptor.h  TcpConnector.cpp  TcpConnector.h  TcpStream.cpp  TcpStream.h
src/thread/: Barrier.cpp  Locker.cpp  Task.cpp  TaskContext.cpp  TaskRunner.cpp  Thread.cpp  ThreadContext.cpp  ThreadContext.h  ThreadInterceptionData.cpp  ThreadInterceptionData.h  ThreadPool.cpp
src/utils/: Console.cpp  Console.h  StringHelper.cpp  StringHelper.h
tests/: MainTestSuite.cpp  main.cpp  tester.sh
tests/argument/: ArgumentAdapterTest.cpp  ArgumentAdapterTest.h  ArgumentListTest.cpp  ArgumentListTest.h  ArgumentParserTest.cpp  ArgumentParserTest.h  ArgumentProviderTest.cpp  ArgumentProviderTest.h
tests/observer/: EventTest.cpp  EventTest.h  MockEventHandler.h  MockSender.cpp
tests/signal/: SignalAdapterTest.cpp  SignalAdapterTest.h
tests/thread/: TaskRunnerTest.cpp  TaskRunnerTest.h  ThreadPoolTest.cpp  ThreadPoolTest.h  ThreadTest.cpp  ThreadTest.h
